updated swagger to include push, token, and signup
