# app/push.go
@@ -10,7 +10,23 @@ import (
 	"github.com/bchadwic/wordbubble/util"
 )
 
+// Push queues a wordbubble for a user
+// @Summary     Push a wordbubble
+// @Description Push adds a new wordbubble to a user's queue
+// @Tags        Wordbubble
+// @Accept      json
+// @Produce     json
+// @Security 	ApiKeyAuth
+// @Param       WordBubble body     model.WordBubble true "WordBubble containing the text to be stored"
+// @Success     200  {object} 		string
+// @Failure     405  {object} 		resp.StatusMethodNotAllowed		"resp.ErrInvalidHttpMethod"
+// @Failure     400  {object} 		resp.StatusBadRequest			"resp.ErrParseWordBubble, InvalidWordBubble"
+// @Failure		409  {object} 		resp.StatusConflict				"resp.ErrMaxAmountOfWordBubblesReached"
+// @Failure     401  {object} 		resp.StatusUnauthorized			"resp.ErrUnauthorized, resp.ErrInvalidTokenSignature"
+// @Failure     500  {object} 		resp.StatusInternalServerError 	"resp.UnknownError"
+// @Router      /push [post]
 func (wb *app) Push(w http.ResponseWriter, r *http.Request) {
+	// TODO make an official response for invalid wordbubbl
 	if r.Method != http.MethodPost {
 		wb.errorResponse(resp.ErrInvalidHttpMethod, w)
 		return
