# app/signup.go
@@ -9,6 +9,18 @@ import (
 	"github.com/bchadwic/wordbubble/util"
 )
 
+// Signup is used to signup a new user
+// @Summary     Signup to api.wordbubble.io
+// @Description Signup to api.wordbubble.io using a unique email and username
+// @Tags        Auth
+// @Accept      json
+// @Produce     json
+// @Param       User body     model.SignupUser true "User information required to signup"
+// @Success     200  {object} 		string
+// @Failure     400  {object} 		resp.StatusBadRequest			"resp.ErrParseUser, resp.ErrEmailIsNotValid, resp.ErrEmailIsTooLong, resp.ErrUsernameIsTooLong, resp.ErrUsernameIsNotLongEnough, resp.ErrUsernameInvalidChars, resp.ErrUserWithUsernameAlreadyExists, resp.ErrUserWithEmailAlreadyExists, resp.ErrCouldNotDetermineUserExistence, InvalidPassword"
+// @Failure     405  {object} 		resp.StatusMethodNotAllowed		"resp.ErrInvalidHttpMethod"
+// @Failure     500  {object} 		resp.StatusInternalServerError	"resp.ErrCouldNotBeHashPassword, resp.ErrCouldNotAddUser, resp.ErrCouldNotStoreRefreshToken"
+// @Router      /signup [post]
 func (wb *app) Signup(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodPost {
 		wb.errorResponse(resp.ErrInvalidHttpMethod, w)
