# main.go
@@ -19,22 +19,21 @@ func main() {
 	}
 }
 
-// @title          Swagger Example API
-// @version        1.0
-// @description    This is a sample server celler server.
-// @termsOfService http://swagger.io/terms/
-
-// @contact.name  API Support
-// @contact.url   http://www.swagger.io/support
-// @contact.email support@swagger.io
-
-// @license.name Apache 2.0
-// @license.url  http://www.apache.org/licenses/LICENSE-2.0.html
-
-// @host     localhost:8080
-// @BasePath /api/v1
-
-// @securityDefinitions.basic BasicAuth
+// @title          				Wordbubble REST API
+// @version        				1.0
+// @description					Wordbubble REST API interacts with Authorization, Wordbubble, and User data
+// @contact.name  				Ben Chadwick
+// @contact.url   				https://github.com/bchadwic
+// @contact.email				benchadwick87@gmail.com
+// @license.name 				Apache 2.0
+// @license.url  				http://www.apache.org/licenses/LICENSE-2.0.html
+// @host						https://api.wordbubble.com
+// @BasePath 					/v1
+// @securityDefinitions.apikey  ApiKeyAuth
+// @tokenUrl                    https://api.wordbubble.com/token
+// @in                          header
+// @name                        Authorization
+// @description					JWT access token retrieved from using a refresh token, gathered from /signup, /login, or /token
 func run(cfg cfg.Config) error {
 	logger := cfg.NewLogger("run")
 
@@ -51,11 +50,11 @@ func run(cfg cfg.Config) error {
 	app := app.NewApp(cfg, authService, userService, wbService)
 
 	logger.Info("attaching routes to app")
-	http.HandleFunc("/signup", app.Signup)
-	http.HandleFunc("/login", app.Login)
-	http.HandleFunc("/token", app.Token)
-	http.HandleFunc("/push", app.Push)
-	http.HandleFunc("/pop/", app.Pop)
+	http.HandleFunc("/v1/signup", app.Signup)
+	http.HandleFunc("/v1/login", app.Login)
+	http.HandleFunc("/v1/token", app.Token)
+	http.HandleFunc("/v1/push", app.Push)
+	http.HandleFunc("/v1/pop", app.Pop)
 
 	logger.Info("starting refresh token cleaner with an interval of: %gs", auth.RefreshTokenCleanerRate.Seconds())
 	app.BackgroundCleaner(authRepo)
